@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod_node_data.h,v 1.4 2005-05-19 23:38:46 achu Exp $
+ *  $Id: cerebrod_node_data.h,v 1.5 2005-05-25 17:04:07 achu Exp $
 \*****************************************************************************/
 
 #ifndef _CEREBROD_NODE_DATA_H
@@ -15,37 +15,11 @@
 
 #include <sys/types.h>
 
+#include "cerebro/cerebro_metric_protocol.h"
+
 #include "cerebro/cerebrod_heartbeat_protocol.h"
 
 #include "hash.h"
-
-/* 
- * cerebrod_metric_type_t
- *
- * type for metric type
- */
-typedef enum {
-  CEREBROD_METRIC_TYPE_BOOL = 0,
-  CEREBROD_METRIC_TYPE_INT32 = 1,
-  CEREBROD_METRIC_TYPE_UNSIGNED_INT32 = 2,
-  CEREBROD_METRIC_TYPE_FLOAT = 3,
-  CEREBROD_METRIC_TYPE_DOUBLE = 4,
-  CEREBROD_METRIC_TYPE_STRING = 5
-} cerebrod_metric_type_t;
-
-/* 
- * cerebrod_metric_type_t
- *
- * type for metric value
- */
-typedef union {
-  char      val_bool;
-  int32_t   val_int32;
-  u_int32_t val_unsigned_int32;
-  float     val_float;
-  double    val_double;
-  char      val_string[CEREBRO_METRIC_STRING_MAXLEN];
-} cerebrod_metric_value_t;
 
 /* 
  * struct cerebrod_metric_data
@@ -56,8 +30,8 @@ struct cerebrod_metric_data
 {
   char *metric_name;
   u_int32_t last_received_time;
-  cerebrod_metric_type_t metric_type;
-  cerebrod_metric_value_t metric_value;
+  cerebro_metric_type_t metric_type;
+  cerebro_metric_value_t metric_value;
 };
 
 /*
