@@ -1,3 +1,7 @@
+2005-05-25  Albert Chu  <chu11@llnl.gov>
+
+	* Continue work on metric server.
+	
 2005-05-24  Albert Chu  <chu11@llnl.gov>
 
 	* Minor cleanup and bug fixes.
